tg-4499 Silencio logs de tests de varios módulos

--- a/back-end/app/src/test/resources/integration-test.properties
+++ b/back-end/app/src/test/resources/integration-test.properties
@@ -85,3 +85,5 @@ google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 ws.renaper.url.base=https://federador.msal.gob.ar/masterfile-federacion-service/api
 ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
+
+logging.level.root=WARN
